[Gepardec/mega#815] feat: implement bulk completion of monthend tasks for employees and project leads
